<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="492dp"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        android:text="@string/home_page"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:entries="@array/main_page_spinner_items"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="326dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="490dp"
        android:text="@string/change" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="176dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="75dp"
        app:srcCompat="@drawable/parrot" />

    <EditText
        android:id="@+id/repeatingText"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="340dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/repeatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="301dp"
        android:text="@string/click" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="175dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="336dp"
        app:srcCompat="@drawable/stopwatch" />

    <Button
        android:id="@+id/stopwatchStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="297dp"
        android:text="@string/stopwatch_start_button" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="188dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="125dp"
        app:srcCompat="@drawable/converter" />

    <Button
        android:id="@+id/converterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="286dp"
        android:layout_marginBottom="91dp"
        android:text="@string/converter_button" />

</RelativeLayout>