<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInfoActivity">

    <ImageView
        android:id="@+id/genderIconImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gender" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/contact_name"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/genderIconImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact_surname"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/genderIconImage"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact_phone_number"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/genderIconImage"
        app:layout_constraintTop_toBottomOf="@+id/surnameTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>